カウント機能と優先順位機能を追加

--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -52,7 +52,7 @@
   <audio controls src="http://rei-yumesaki.up.seesaa.net/material/Rei-Yumesaki-Moe-48-Praise-Sugoi_nodesu.mp3" class="audio"></audio>
 -->
  <div class="d-flex" style="margin-top:30px;">
-    <h3>タスク</h3>
+    <h3>タスク({{ total }})</h3>
         <form action="/deleteall" method="post">
           <button type="submit" class="btn btn-danger">全て消す</button>
           </form>
