--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -44,7 +44,7 @@
       </select>
     
 
-      <button type="submit" class="btn btn-danger">送信</button>
+      <button type="submit" class="btn btn-danger">追加</button>
     </form>
   </div>
 
@@ -53,14 +53,17 @@
 -->
  <div class="d-flex" style="margin-top:30px;">
     <h3>タスク({{ total }})</h3>
-        <form action="/deleteall" method="post">
+  </div>
+     <div class="d-flex flex-row-reverse">
+        <form action="/deleteall" method="post" style="margin-left:50px;">
           <button type="submit" class="btn btn-danger">全て消す</button>
           </form>
 
         <form action="/sort" method="post">
-          <button type="submit" class="btn btn-danger">優先順位に並び替える</button>
+          <button type="submit" class="btn btn-danger" style="">優先順位に並び替える</button>
           </form>
     </div>
+  </div>
   </div>
 
     </div>
