画像の追加

--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -14,7 +14,69 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
   <body>
+    <div class="balloon6">
+    <div class="faceicon">
+   <img src="static/image/ai.jpg" style="height:100px; width:100px;">
+    </div>
+    <div class="chatting">
+      <div class="says">
+        <p>みなさん、こんにちは！私は、バーチャルアシスタントのゆいです！これから
+        よろしくお願いします！</p>
+      </div>
+    </div>
+  </div>
 
+    
+
+  <style>
+  /*以下、②左側のコメント*/
+.balloon6 {
+  width: 100%;
+  margin: 10px 0;
+  overflow: hidden;
+}
+
+.balloon6 .faceicon {
+  float: left;
+  margin-right: -50px;
+  width: 40px;
+}
+
+.balloon6 .faceicon img{
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+}
+.balloon6 .chatting {
+  width: 100%;
+  text-align: left;
+}
+.says {
+  display: inline-block;
+  position: relative; 
+  margin: 50px 0 0 100px;
+  padding: 10px;
+  max-width: 250px;
+  border-radius: 12px;
+  background: #edf1ee;
+}
+
+.says:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 3px; 
+  left: -19px;
+  border: 8px solid transparent;
+  border-right: 18px solid #edf1ee;
+  -webkit-transform: rotate(35deg);
+  transform: rotate(35deg);
+}
+.says p {
+  margin: 0;
+  padding: 0;
+}
+</style>
     <div class="container">
 
     <h3>タスク管理</h3>
