Aiチャット固定化

--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
   <body>
-    <div class="balloon6">
+    <div class="balloon6" style="position:fixed;">
     <div class="faceicon">
    <img src="static/image/ai.jpg" style="height:100px; width:100px;">
     </div>
