--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
   <body>
-    <div class="balloon6" style="position:fixed;">
+    <div class="balloon6" style="position:fixed; margin-top:-150px">
     <div class="faceicon">
    <img src="static/image/ai.jpg" style="height:100px; width:100px;">
     </div>
@@ -77,7 +77,7 @@
   padding: 0;
 }
 </style>
-    <div class="container">
+    <div class="container" style="margin-top:200px;">
 
     <h3>タスク管理</h3>
 
