--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -17,6 +17,7 @@
     <div class="balloon6" style="position:fixed; margin-top:-150px">
     <div class="faceicon">
    <img src="static/image/ai.jpg" style="height:100px; width:100px;">
+   <h3 style="padding-left:20px;">yui</h3>
     </div>
     <div class="chatting">
       <div class="says">
