--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -12,6 +12,8 @@
 
     <!-- font5 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+
   </head>
   <body>
     <div class="balloon6" style="position:fixed; margin-top:-150px">
@@ -83,22 +85,22 @@
     <h3>タスク管理</h3>
 
     <div class="card">
-    <form action="/add" method="post">
+    <form>
     <div class = "form-group">
       <label for="">タイトル</label>
 
-      <input type="text" class="form-control" name="title">   
+      <input type="text" class="form-control" name="title" id="title">   
      </div>
 
      <div class="form-group">
        <label for="">内容</label>
 
-       <input type="text" class="form-control" name="content">
+       <input type="text" class="form-control" name="content" id="content">
       </div>
 
       <p>優先度</p>
 
-      <select class="custom-select custom-select-sm" name="section">
+      <select class="custom-select custom-select-sm" name="section" id="selecttask">
         <option  value="A">A</option>
         <option value="B">B</option>
         <option value="C">C</option>
@@ -107,7 +109,7 @@
       </select>
     
 
-      <button type="submit" class="btn btn-danger">追加</button>
+      <button type="submit" class="btn btn-danger" id="addSubmit">追加</button>
     </form>
   </div>
 
@@ -115,11 +117,11 @@
   <audio controls src="http://rei-yumesaki.up.seesaa.net/material/Rei-Yumesaki-Moe-48-Praise-Sugoi_nodesu.mp3" class="audio"></audio>
 -->
  <div class="d-flex" style="margin-top:30px;">
-    <h3>タスク({{ total }})</h3>
+    <h3 id="tasktotal">リスト数({{ total }})</h3>
   </div>
      <div class="d-flex flex-row-reverse">
-        <form action="/deleteall" method="post" style="margin-left:50px;">
-          <button type="submit" class="btn btn-danger">全て消す</button>
+        <form style="margin-left:50px;">
+          <button type="submit" class="btn btn-danger" id="deleteall">全て消す</button>
           </form>
 
         <form action="/sort" method="post">
@@ -130,12 +132,7 @@
   </div>
 
     </div>
-    {% if todos == [] %}
-    <div class="alert alert-wraning" role="alert">
-      Hearings bir todomoz bulnmuyor..
-    </div>
-    {% else %}
-    
+
     <table class="table w-75 mx-auto">
       <thead>
         <tr>
@@ -146,7 +143,11 @@
           <th scope="col">完了</th>
           </tr>
       </thead>
-      <tbody>
+      <tbody id="tbody">
+    {% if todos == [] %}
+    
+    {% else %}
+
         {% for todo in todos %}
 
         <tr class="back">
@@ -160,7 +161,7 @@
 
           </tr>
         {% endfor %}
-        </thead>
+        </tbody>
         </table>
     {% endif %}
     
@@ -168,12 +169,19 @@
     </div>
 
      <!-- Bootstrap4  javascript -->
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 <!-- Jquery --->
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+
+
 <script type=text/javascript src="{{url_for('static',filename="music.js")}}"></script>
+
+<script type=text/javascript src="{{url_for('static',filename="main.js")}}"></script>
+
+<script type=text/javascript src="{{url_for('static',filename="deleteall.js")}}"></script>
     </body>
 
 <style>
