--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -13,7 +13,7 @@
     <!-- font5 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-
+    <link rel="stylesheet" type="text/css" href="static/yui.css">
   </head>
   <body>
     <div class="balloon6" style="position:fixed; margin-top:-150px">
@@ -29,57 +29,7 @@
     </div>
   </div>
 
-    
 
-  <style>
-  /*以下、②左側のコメント*/
-.balloon6 {
-  width: 100%;
-  margin: 10px 0;
-  overflow: hidden;
-}
-
-.balloon6 .faceicon {
-  float: left;
-  margin-right: -50px;
-  width: 40px;
-}
-
-.balloon6 .faceicon img{
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
-}
-.balloon6 .chatting {
-  width: 100%;
-  text-align: left;
-}
-.says {
-  display: inline-block;
-  position: relative; 
-  margin: 50px 0 0 100px;
-  padding: 10px;
-  max-width: 250px;
-  border-radius: 12px;
-  background: #edf1ee;
-}
-
-.says:after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 3px; 
-  left: -19px;
-  border: 8px solid transparent;
-  border-right: 18px solid #edf1ee;
-  -webkit-transform: rotate(35deg);
-  transform: rotate(35deg);
-}
-.says p {
-  margin: 0;
-  padding: 0;
-}
-</style>
     <div class="container" style="margin-top:200px;">
 
     <h3>タスク管理</h3>
@@ -116,7 +66,7 @@
   <!--
   <audio controls src="http://rei-yumesaki.up.seesaa.net/material/Rei-Yumesaki-Moe-48-Praise-Sugoi_nodesu.mp3" class="audio"></audio>
 -->
- <div class="d-flex" style="margin-top:30px;">
+ <div class="d-flex mx-auto" style="margin-top:30px;">
     <h3 id="tasktotal">リスト数({{ total }})</h3>
   </div>
      <div class="d-flex flex-row-reverse">
@@ -182,21 +132,11 @@
 <script type=text/javascript src="{{url_for('static',filename="main.js")}}"></script>
 
 <script type=text/javascript src="{{url_for('static',filename="deleteall.js")}}"></script>
+
+<script type=text/javascript src="{{url_for('static',filename="color.js")}}"></script>
+
+<script type=text/javascript src="{{url_for('static',filename="yuifadeIn.js")}}"></script>
+
     </body>
 
-<style>
-.back{
-  color: white;
-}
 
-a:link{
-  color:white;
-}
-
-a:visited{
-  color:white;
-}
-
-
-
-</style>
