複数のAjax通信

--- a/TodoList/templates/index.html
+++ b/TodoList/templates/index.html
@@ -137,6 +137,8 @@
 
 <script type=text/javascript src="{{url_for('static',filename="yuifadeIn.js")}}"></script>
 
+<script type=text/javascript src="{{url_for('static',filename="delete.js")}}"></script>
+
     </body>
 
 
